# DarkStoriesAI

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/test/darkstoriesai/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/test/darkstoriesai/: API.java  AdapterListItems.java  Answer.java  HowToPlay.java  Languages.java  LanguagesManager.java  ListAnswers.java  ListItem.java  ListStories.java  MainActivity.java  OnStartFearAnimal.java  OnStartFearMonster.java  OnStartFearPlace.java  OnStartLanguages.java  OnStartName.java  SavedStories.java  SplashActivity.java
app/src/main/res/drawable/: ic_menu.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  how_to_play.xml  languages.xml  list_answers.xml  list_item_layout.xml  list_stories.xml  on_start_fear_animal.xml  on_start_fear_monster.xml  on_start_fear_place.xml  on_start_languages.xml  on_start_name.xml  saved_stories.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pl/: strings.xml
app/src/test/java/org/test/darkstoriesai/: ExampleUnitTest.java
gpt/: model_gpt.py  models.py  pyproject.toml  redisService.py  run_API.py
gradle/wrapper/: gradle-wrapper.properties
localGPT/: .gitignore  api_model.py  prompt_template_utils.py  pyproject.toml  redisService.py  requirements.txt  run_localGPT_API.py
localGPT/SOURCE_DOCUMENTS/: stories.txt
localGPT/scripts/: api_model.py  constants.py  load_models.py  prompt_template_utils.py  redisService.py  run_localGPT_API.py
