# ==== black ====
[tool.black]
line-length = 119
target-version = ['py311']


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = [
    "tests",
    "scripts",
    "hooks",
]

[tool.poetry]
name = "localGPT"
version = "0.1.0"
description = ""
authors = ["Rafał <wruku1212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.0.267"
chromadb = "0.4.6"
pdfminer-six = "20221105"
instructorembedding = "^1.0.1"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
huggingface-hub = "^0.19.4"
transformers = "^4.35.2"
protobuf = {version = "3.20.3", markers = "sys_platform == \"darwin\" and platform_machine == \"arm64\""}
auto-gptq = "0.2.2"
docx2txt = "^0.8"
unstructured = {extras = ["pdf"], version = "^0.10.30"}
urllib3 = "1.26.6"
accelerate = "^0.24.1"
bitsandbytes = {markers = "sys_platform != \"win32\"", version = "^0.41.2.post2"}
bitsandbytes-windows = {markers = "sys_platform == \"win32\"", version = "^0.37.5"}
click = "^8.1.7"
flask = "^3.0.0"
requests = "^2.31.0"
streamlit = "^1.28.2"
streamlit-extras = "^0.3.5"
openpyxl = "^3.1.2"
llama-cpp-python = "0.1.83"
flask-cors = "^4.0.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
